posgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showtimes-service
spec:
  selector:
    app: showtimes
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
  type: ClusterIP
