ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: showtimes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-app-service
                port:
                  number: 7000
